# playground

./: .gitignore  .terraform.tfstate.lock.info  LICENSE  Makefile  README.md  all_code.txt  main.tf  network.tf  terragrunt.hcl  variables.tf
.github/workflows/: destroy.yml  terragrunt.yml
01-network/: main.tf  terragrunt.hcl  variables.tf
02-security/: data.tf  main.tf  outputs.tf  terragrunt.hcl
03-services/: data.tf  iam.tf  jump.tf  main.tf  master.tf  outputs.tf  provider.tf  terragrunt.hcl  variables.tf  versions.tf  worker.tf
ansible/: setup_k3s.yml
api-gateway/: Dockerfile  main.py  pyproject.toml  requirements.txt
apps/node-cleanup/: README.md  cronjob.yaml  namespace.yaml
apps/otel-shop/: README.md  frontend-ingress.yaml  kustomization.yaml
argocd/: root-application.yaml
argocd-apps/infrastructure/: argocd-app-node-cleanup.yaml  aws-load-balancer-controller-app.yaml  ca-app.yaml  cloudflare-app.yaml  external-dns-app.yaml  external-dns-secret-app.yaml  grafana-dashboard-app.yaml  ingress-app.yaml  kubecost-app.yaml  nth-app.yaml
bedrock/: project_review_report.md
infra/01-network/: outputs.tf
infra/02-security/: main.tf  outputs.tf  terragrunt.hcl
infra/03-services/: terragrunt.hcl
infrastructure/ca/: README.md
infrastructure/cloudflare/: cloudflare-tunnel.yaml  kustomization.yaml
infrastructure/external-dns/: README.md  values.yaml
infrastructure/external-dns-secret/: README.md  kustomization.yaml
infrastructure/ingress-controllers/: README.md
infrastructure/nth/: install.sh  nth_values.yaml  (+1 more)
manifests/: namespace.yaml
(+160 files in other folders)
