[tool.poetry]
name = "llmops-api-gateway"
version = "0.1.0"
description = "LLMOps API Gateway with Semantic Caching"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = "0.24.0"
pydantic = "2.5.2"
requests = "2.31.0"
gptcache = "0.1.43"
onnxruntime = "1.16.3"
faiss-cpu = "1.7.4"
numpy = "1.26.4"
chromadb = "0.4.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"